# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.docs.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  contacts.py  deps.py
app/api/v1/endpoints/: contacts.py
app/core/: cache.py  config.py
app/db/: __init__.py  session.py
app/models/: __init__.py  contact.py  user.py
app/schemas/: contact.py  user.py
app/services/: auth.py  contact.py  contacts.py  email.py  users.py
docs/: .gitignore  README.md
docs/source/: api.rst  architecture.rst  caching.rst  conf.py  configuration.rst  core.rst  development.rst  index.rst  models.rst  modules.rst  password_reset.rst  schemas.rst  services.rst  usage.rst  user_roles.rst
migrations/: env.py
migrations/versions/: 32eff3cf5875_add_user_id_to_contacts.py  add_user_role.py  initial_migration.py
scripts/: build_docs.sh  run_tests.sh
tests/: README.md  conftest.py  test_coverage.py
tests/integration/: test_admin_api.py  test_auth_api.py  test_contacts_api.py
tests/unit/: test_auth.py  test_cache.py  test_contacts.py  test_email.py  test_models.py  test_schemas.py  test_user_roles.py
